--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ p + p, img.blogcontent + p
     margin-top: 1em;
 }
 
+.first
+{
+    margin-top: 0 !important;
+}
 h1
 {
     display:   block;
@@ -204,9 +208,10 @@ h1
     color:            #999;
     text-shadow:      1px 1px 0px #fff;
 }
-.first
+h2
 {
-    margin-top: 0 !important;
+    margin:  30px 0 10px 0;
+    padding: 5px  0;
 }
 h1.blogtitle, h2.blogdate
 {
